checking voucher value !isNaN

--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -28,7 +28,7 @@
                             </div>
             
                             <div class="form-label-group">
-                                <input type="text" name="voucherValue" id="voucherValue" placeholder="Voucher value" class="form-control" >
+                                <input type="number" name="voucherValue" id="voucherValue" placeholder="Voucher value" class="form-control" >
                                 <label for="voucherValue">Voucher value</label>
                             </div>
             
