--- a/public/style.css
+++ b/public/style.css
@@ -30,61 +30,67 @@
   margin-bottom: 1rem;
 }
 
-.form-label-group>input,
-.form-label-group>label {
+.form-label-group>input {
   padding: var(--input-padding-y) var(--input-padding-x);
   height: auto;
   border-radius: 2rem;
 }
 
-.form-label-group>label {
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: block;
-  width: 100%;
-  margin-bottom: 0;
-  /* Override default `<label>` margin */
-  line-height: 1.5;
-  color: #495057;
-  cursor: text;
-  /* Match the input under the label */
-  border: 1px solid transparent;
-  border-radius: .25rem;
-  transition: all .1s ease-in-out;
-}
-
-.form-label-group input::-webkit-input-placeholder {
-  color: transparent;
-}
-
-.form-label-group input:-ms-input-placeholder {
-  color: transparent;
-}
-
-.form-label-group input::-ms-input-placeholder {
-  color: transparent;
-}
-
-.form-label-group input::-moz-placeholder {
-  color: transparent;
-}
-
-.form-label-group input::placeholder {
-  color: transparent;
-}
-
-.form-label-group input:not(:placeholder-shown) {
-  padding-top: calc(var(--input-padding-y) + var(--input-padding-y) * (2 / 3));
-  padding-bottom: calc(var(--input-padding-y) / 3);
-}
-
-.form-label-group input:not(:placeholder-shown)~label {
-  padding-top: calc(var(--input-padding-y) / 3);
-  padding-bottom: calc(var(--input-padding-y) / 3);
-  font-size: 12px;
-  color: #777;
-}
 #showSuccessMsg {
     display: none;
+}
+.voucher-center {
+  justify-content: center;
+  align-items: center;
+}
+.voucherbox {
+  width: 320px;
+  height: 200px;
+  display: block;
+  padding: 1rem 2rem;
+  background-color: #d61d23;
+  box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.4);
+  background-image: url('voucher-right.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: 100% 50%;
+  zoom: 1.4;
+}
+.voucherbox__logo {
+  width: 76px;
+  height: 42px;
+  margin: 0 2rem 1.4rem;
+  display: block;
+  background-image: url('logo.svg');
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: cover;
+}
+.voucherbox__text {
+  font-size: 18px;
+  font-weight: 900;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: 0.1px;
+  margin: .8rem 0;
+  color: #ffffff;
+}
+.voucherbox__number {
+  text-align: center;
+  padding: 5px;
+  border: 0;
+  margin: 0;
+  width: 130px;
+  font-size: 12px;
+}
+
+@media only screen and (max-width: 767px) {
+  .voucherbox {
+    zoom: 0;
+    margin-top: 20px;
+  }
+  .login, .image {
+    min-height: 0;
+  }
 }
