--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -6,39 +6,43 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel='stylesheet' href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
     <link rel='stylesheet' href="../public/style.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.bundle.min.js"></script>
     <title>Dashboard 🕹️</title>
 </head>
 <body>
     <div class="container-fluid">
         <div class="row no-gutter">
-            <div class="d-none d-md-flex col-md-4 col-lg-6 bg-image"></div>
+            <div class="d-flex col-md-4 col-lg-6 voucher-center">
+                <div id="voucherbox" class="voucherbox"> 
+                    <div class="voucherbox__content">
+                        <span class="voucherbox__logo"></span>
+                        <p class="voucherbox__text">Jetzt <span id="voucherboxValue"></span> €<br>Gutscheincode<br>einlösen</p>
+                        <input id="voucherboxNumber" type="text" class="voucherbox__number" spellcheck="false" readonly="readonly">
+                    </div>
+                </div>
+            </div>
             <div class="col-md-8 col-lg-6">
                 <div class="login d-flex align-items-center py-5">
                 <div class="container">
                     <div class="row">
-                    <div class="col-md-9 col-lg-8 mx-auto">
-                        <h3 class="login-heading mb-4">voucher switcher 🕹️</h3>
-                        <h2 id="showSuccessMsg">Updated 👌</h2>
-                        <form id="postData">
-                            <div class="form-label-group">
-                                <input type="text" name="voucherNumber" id="voucherNumber" placeholder="Voucher number:" class="form-control" autofocus>
-                                <label for="voucherNumber">Voucher number:</label>
-                            </div>
-            
-                            <div class="form-label-group">
-                                <input type="number" name="voucherValue" id="voucherValue" placeholder="Voucher value" class="form-control" >
-                                <label for="voucherValue">Voucher value</label>
-                            </div>
-            
-                            <div class="custom-control custom-checkbox mb-3">
-                                <input type="checkbox" name="voucherDisabled" id="voucherDisabled" class="custom-control-input">
-                                <label class="custom-control-label" for="voucherDisabled">Disable voucher</label>
-                            </div>
-                            <button type="submit" id="submit" class="btn btn-lg btn-primary btn-block btn-login text-uppercase font-weight-bold mb-2">Submit</button>
-                        </form>
-                    </div>
+                        <div class="col-md-9 col-lg-8 mx-auto">
+                            <h3 class="login-heading mb-4">voucher switcher 🕹️</h3>
+                            <h2 id="showSuccessMsg">Updated 👌</h2>
+                            <form id="postData">
+                                <div class="form-label-group">
+                                    <input type="text" name="voucherNumber" id="voucherNumber" placeholder="Voucher number:" class="form-control" onkeyup="updateNumber(event)" autofocus>
+                                </div>
+                
+                                <div class="form-label-group">
+                                    <input type="number" name="voucherValue" id="voucherValue" placeholder="Voucher value" class="form-control" onkeyup="updateValue(event)">
+                                </div>
+                
+                                <div class="custom-control custom-checkbox mb-3">
+                                    <input type="checkbox" name="voucherDisabled" id="voucherDisabled" class="custom-control-input" onclick="updateVoucherStatus()">
+                                    <label class="custom-control-label" for="voucherDisabled">Disable voucher</label>
+                                </div>
+                                <button type="submit" id="submit" class="btn btn-lg btn-primary btn-block btn-login text-uppercase font-weight-bold mb-2">Submit</button>
+                            </form>
+                        </div>
                     </div>
                 </div>
                 </div>
@@ -52,6 +56,9 @@
   let voucherDisabled = document.getElementById('voucherDisabled');
   let form = document.getElementById('postData');
   let showSuccessMsg = document.getElementById('showSuccessMsg');
+  let voucherbox =  document.getElementById('voucherbox');
+  let voucherboxNumber = document.getElementById('voucherboxNumber');
+  let voucherboxValue =  document.getElementById('voucherboxValue');
 
   // update status
   const updateStatus = () => {
@@ -61,6 +68,11 @@
         voucher.value = data.table[0].voucher;
         value.value = data.table[0].value;
         voucherDisabled.checked = !data.table[0].status;
+        voucherboxNumber.value += data.table[0].voucher;
+        voucherboxValue.innerText += data.table[0].value;
+        if(!data.table[0].status) {
+            voucherbox.style.filter = "blur(4px)";
+        }
       }).catch(err => {
           console.log(err);
       });
@@ -87,7 +99,25 @@
     .then((res) => !res.status ? 200 : successMsg())
     .catch((err)=>console.log(err))
   }
-  
+
+  // data binding
+  updateNumber = (e) => {
+    console.log(e.target.value);
+    voucherboxNumber.value = e.target.value;
+  }
+
+  updateValue = (e) => {
+    voucherboxValue.innerText = e.target.value;
+  }
+
+  updateVoucherStatus = (e) => {
+    if(document.getElementById('voucherDisabled').checked) {
+        voucherbox.style.filter = "blur(4px)";
+    } else {
+        voucherbox.style.filter = "blur(0)";
+    }
+  }
+
   updateStatus();
 </script>
 </html>
