new structure, es6 refactoring

--- a/views/index.html
+++ b/views/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel='stylesheet' href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
-    <link rel='stylesheet' href="../public/style.css">
+    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="public/style.css" />
     <script src="https://cdn.auth0.com/js/auth0/9.10/auth0.min.js"></script>
     <title>Login: voucher switcher 🕹️</title>
 </head>
